<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="sed.musical_structure.MainActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="32dp"
        android:text="@string/main_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/main_description"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textSize="24dp"
        android:text="@string/NowPlaying"
        android:id="@+id/NP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/Songs"
        android:id="@+id/SO"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/Album"
        android:id="@+id/AL"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/Artists"
        android:id="@+id/AR"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/Payment"
        android:id="@+id/PL"/>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="16dp">
    </SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/playcirc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:src="@drawable/playlist"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:src="@drawable/album"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:src="@drawable/artist"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


        <ImageView android:src="@drawable/payment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
