<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >

        <ImageView android:id="@+id/MAB"
            android:src="@drawable/home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/SOB"
            android:src="@drawable/playlist"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/NPB"
            android:src="@drawable/playcirc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/ARB"
            android:src="@drawable/artist"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


        <ImageView android:id="@+id/PLB"
            android:src="@drawable/payment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="Album"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/album_description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView  android:src="@drawable/albumart"
                android:layout_width="140dp"
                android:layout_height="140dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="B.O.A.T.S II"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/ArtistName" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView  android:src="@drawable/chance"
                android:layout_width="140dp"
                android:layout_height="140dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="R.E.D."
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="The Game" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/icons"
        android:layout_marginTop="20dp">


    <ImageView android:src="@drawable/rw"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"/>
    <ImageView android:src="@drawable/play"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"/>
    <ImageView android:src="@drawable/ff"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SongTitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ArtistName"/>
    </LinearLayout>

</LinearLayout>
</LinearLayout>