<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >

        <ImageView android:id="@+id/MAB"
            android:src="@drawable/home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/SOB"
            android:src="@drawable/playlist"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/NPB"
            android:src="@drawable/playcirc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView android:id="@+id/ALB"
            android:src="@drawable/album"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


        <ImageView android:id="@+id/PLB"
            android:src="@drawable/payment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="Artist" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/artist_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <ImageView android:src="@drawable/albumart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/albumArt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_toRightOf="@+id/albumArt">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:id="@+id/artist"
                android:text="2 Chains" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="7 Songs"
                android:id="@+id/songCount"/>

            />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <ImageView android:src="@drawable/childish"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/albumArt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_toRightOf="@+id/albumArt">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="Drake" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="72 Songs"/>

            />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <ImageView android:src="@drawable/chance"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/albumArt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_toRightOf="@+id/albumArt">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="50 Cent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="17 Songs"/>

            />
        </LinearLayout>




    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/icons"
        android:layout_marginTop="20dp">


        <ImageView android:src="@drawable/rw"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"/>
        <ImageView android:src="@drawable/play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"/>
        <ImageView android:src="@drawable/ff"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SongTitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ArtistName"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>